fix scrollbar showing when it should be hidden and sort text overflowing

--- a/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectCard/ExpandedCourseCard/SectionSelect/SectionSelect.css
+++ b/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectCard/ExpandedCourseCard/SectionSelect/SectionSelect.css
@@ -260,6 +260,7 @@
     padding-bottom: 4px;
     padding: 8px 0 0 4px;
     height: 100%;
+    width: calc(100% - 4px);
 }
 .table-container .button-root {
     width: calc(100% - 5px);
@@ -272,6 +273,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: fit-content;
 }
 .table-container .MuiCollapse-container {
     display: flex !important;
